--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
                   <label style="margin: 10px 0 3px 0"><a href="#" class="link">Forgot Password ?</a></label>
                   <br>
-                  <label style="margin-bottom: 0">Don't have an account ? <a href="signup.html" data-toggle="modal" data-target="#modalRegisterForm" class="link">Register</a></label>
+                  <label style="margin-bottom: 0">Don't have an account ? <a href="signup.html" class="link">Register</a></label>
                   <hr class="mt-3 mb-4">
                   <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fa fa-google" aria-hidden="true"></i> Sign in with Google</button>
                   <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fa fa-facebook" aria-hidden="true"></i> Sign in with Facebook</button>
